# kptnhook

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  compile-shellcode.ps1  create_cert.ps1  install.ps1
include/kptnhook/: CMakeLists.txt  arch.h  drvglobal.h  handler.h  hook.h  known_dlls.h  log.h  main.h  path.h  pointers.h  raii.hpp  tibpebwow64.h  undocumented.h
pirt/: Cargo.toml
pirt/src/: lib.rs  logging.rs  procenv.rs
src/: CMakeLists.txt  arch.cpp  drvglobal.cpp  handler.cpp  hook.cpp  known_dlls.cpp  main.cpp  path.cpp
src/shellcode/: shellcode32.asm  shellcode64.asm  structs.asm
